--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
-
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-
+    implementation'androidx.cardview:cardview'
     implementation "androidx.media:media:1.1.0"
 }
